tests/compile-fail/parser/reasign.sk
fn main() {
    // TODO: Change
    let x = 2;
    print x;
    x = 3;
    print x;
}
